change to LocalDate, program now checks BBE when adding item